Bug 851642 - Make sure fullscreenchange event is sent even when the document is being removed from the doctree. r=smaug

... instead of relying on nsScreen being destroyed which was causing flaky
behaviour on Firefox Android (based on GC) and was creating a race condition bug
on Firefox OS.